--- a/index.html
+++ b/index.html
@@ -11,3 +11,5 @@
 <h1>Controlde versiones</h1>
 </body>
 </html>
+<h2>Beta Diaz Nahuel</h2>
+<link rel="icon" type="image/x-icon" href="favicon.ico">
