BETA: edita index.html

--- a/index.html
+++ b/index.html
@@ -14,3 +14,4 @@
 </html>
 <h2>Beta Diaz Nahuel</h2>
 <link rel="icon" type="image/x-icon" href="favicon.ico">
+<p>Beta Nahuel Diaz, 26/11/25, 19:33</p>
