GAMMA agrego apellido nombre fecha y hora en TESTING

--- a/index.html
+++ b/index.html
@@ -1,17 +1,5 @@
 
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="utf-8">
-<title> UTN FRA</title>
-<link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" type="text/css" href="estilo.css">
-</head>
-<body>
-<h1>Controlde versiones</h1>
-<p>Villamil Candela, 26/11/25, 19:27 </p>
-</body>
-</html>
-<h2>Beta Diaz Nahuel</h2>
-<link rel="icon" type="image/x-icon" href="favicon.ico">
-<p>Beta Nahuel Diaz, 26/11/25, 19:33</p>
+<!DOCTYPE html> <html> <head> <meta charset="utf-8"> <title> UTN FRA</title> <link rel="icon" type="image/x-icon" href="favicon.ico"> <link rel="stylesheet" 
+type="text/css" href="estilo.css"> </head> <body> <h1>Controlde versiones</h1> <p>Villamil Candela, 26/11/25, 19:27 </p> </body> </html> <h2>Beta Diaz Nahuel</h2> <link 
+rel="icon" type="image/x-icon" href="favicon.ico"> <p>Beta Nahuel Diaz, 26/11/25, 19:33</p>
+<p>Di Viesti Santiago, 26/11/25, 19:39 </p>
